# Rendering-Project

./: CMakeLists.txt  CMakePresets.json  cell.cpp  cell.hpp  defines.hpp  display.c  display.cpp  display.h  display.hpp  main.cpp  map.cpp  map.h  map.hpp  ray.cpp  ray.hpp  spi.c  task.c  task.cpp  task.hpp  textures.c  textures.cpp  textures.h  textures.hpp  vec.cpp  vec.hpp
Original/: Makefile  cell.c  cell.h  defines.h  demo notes.md  main.c  main.hex  main.lss  make_tex.js  map.c  ray.c  ray.h  spi.h  task.h  thumbstick.c  thumbstick.h  vec.c  vec.h  writeup.md
